# SPDX-FileCopyrightText: 2026 geisserml <geisserml@gmail.com>
# SPDX-License-Identifier: MPL-2.0

[metadata]
name = sla2pdf
description = Convert Scribus SLA documents to PDF using Python
long_description = file: README.md
long_description_content_type = text/markdown
author = geisserml
author_email = geisserml@gmail.com
license = MPL-2.0
license_files =
    LICENSES/*
keywords = scribus, sla, pdf

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.6
platforms = any
zip_safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sla2pdf = sla2pdf.__main__:main
